# remote-agents-core

./: Cargo.toml  README.md
crates/remote-agents-core/: Cargo.toml
crates/remote-agents-core/src/: context.rs  lib.rs  log_msg.rs  msg_store.rs  traits.rs
crates/remote-agents-executor/: Cargo.toml
crates/remote-agents-executor/src/: approvals.rs  command.rs  lib.rs
crates/remote-agents-executor/src/claude/: client.rs  mod.rs  protocol.rs  types.rs
crates/remote-agents-pty/: Cargo.toml
crates/remote-agents-pty/src/: lib.rs  service.rs  shell.rs
crates/remote-agents-session/: Cargo.toml
crates/remote-agents-session/src/: lib.rs  manager.rs
crates/remote-agents-session/src/storage/: memory.rs  mod.rs  sqlite.rs
crates/remote-agents-transport/: Cargo.toml
crates/remote-agents-transport/src/: lib.rs  protocol.rs  tui.rs  websocket.rs
examples/tui-app/: Cargo.toml
examples/tui-app/src/: main.rs
examples/web-server/: Cargo.toml
examples/web-server/src/: main.rs
