[package]
name = "remote-agents-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core abstractions for remote agent session management"

[features]
default = []
# Enable SSE support (adds axum dependency)
sse = ["dep:axum"]

[dependencies]
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
json-patch = { workspace = true }
tracing = { workspace = true }
command-group = { version = "5", features = ["with-tokio"] }

# Optional SSE support
axum = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = { workspace = true }

[lints]
workspace = true
