[package]
name = "remote-agents-executor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Claude Code executor with SDK protocol support"

[features]
default = []

[dependencies]
remote-agents-core = { workspace = true }
remote-agents-pty = { workspace = true }

tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
shlex = { workspace = true }
command-group = { version = "5", features = ["tokio"] }

[target.'cfg(windows)'.dependencies]
winsplit = "0.1"

[dev-dependencies]
tokio-test = { workspace = true }

[lints]
workspace = true
