[package]
name = "remote-agents-session"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Session orchestration and storage for remote agents"

[features]
default = ["memory"]
memory = []
sqlite = ["dep:sqlx"]

[dependencies]
remote-agents-core = { workspace = true }
remote-agents-executor = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

# Optional SQLite support
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"], optional = true }

[dev-dependencies]
tokio-test = { workspace = true }

[lints]
workspace = true
