[package]
name = "tui-app-example"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
remote-agents-core = { workspace = true }
remote-agents-session = { workspace = true }
remote-agents-transport = { workspace = true, features = ["tui"] }
remote-agents-executor = { workspace = true }

tokio = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
