[package]
name = "web-server-example"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
remote-agents-core = { workspace = true, features = ["sse"] }
remote-agents-pty = { workspace = true }
remote-agents-session = { workspace = true }
remote-agents-transport = { workspace = true, features = ["websocket"] }
remote-agents-executor = { workspace = true }

tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }

[lints]
workspace = true
